<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">

    <group>
        <item
            android:id="@+id/website"
            android:icon="@drawable/website"
            android:title="@string/website" />

        <item
            android:id="@+id/facebookPage"

            android:title="@string/facebook_page"

            />
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:title="@string/nav_rate"
                android:icon="@drawable/rate"
                />

            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_share"
                android:icon="@drawable/share"
                />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/nav_privacy_policy"
                android:icon="@drawable/privacy"

                />
            <item
                android:id="@+id/nav_terms_conditions"
                android:title="@string/nav_terms_conditions"

                />
            <item
                android:id="@+id/more"
                android:title="@string/more"
                android:icon="@drawable/more"
                />
        </menu>
    </item>

</menu>